--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.10.6",
     "@angular/cli": "6.0.8",
     "@angular/compiler": "6.0.5",
     "@angular/compiler-cli": "6.0.5",
@@ -45,13 +46,12 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-remap-istanbul": "^0.6.0",
     "protractor": "4.0.9",
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "2.7.2",
-    "webdriver-manager": "10.2.5",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "webdriver-manager": "10.2.5"
   }
 }
